css/styles.css
/* ... */
/*
=============== 
Global Styles
===============
*/

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: var(--ff-primary);
  background: var(--clr-white);
  color: var(--clr-grey-1);
  line-height: 1.5;
  font-size: 0.875rem;
}
ul {
  list-style-type: none;
}
a {
  text-decoration: none;
}
img:not(.nav-logo) {
  width: 100%;
  display: block;
}
h1,
h2,
h3,
h4 {
  letter-spacing: var(--spacing);
  text-transform: capitalize;
  line-height: 1.25;
  margin-bottom: 0.75rem;
}
h1 {
  font-size: 3rem;
}
h2 {
  font-size: 2rem;
}
h3 {
  font-size: 1.25rem;
}
h4 {
  font-size: 0.875rem;
}
p {
  margin-bottom: 1.25rem;
  color: var(--clr-grey-5);
}
@media screen and (min-width: 800px) {
  h1 {
    font-size: 4rem;
  }
  h2 {
    font-size: 2.5rem;
  }
  h3 {
    font-size: 1.75rem;
  }
  h4 {
    font-size: 1rem;
  }
  body {
    font-size: 1rem;
  }
  h1,
  h2,
  h3,
  h4 {
    line-height: 1;
  }
}
/*  Global Classes */

.btn {
  text-transform: uppercase;
  background: var(--clr-primary-5);
  color: var(--clr-white);
  padding: 0.375rem 0.75rem;
  letter-spacing: var(--spacing);
  display: inline-block;
  /* font-weight: 700; */
  -webkit-transition: var(--transition);
  transition: var(--transition);
  font-size: 0.875rem;
  border: 2px solid transparent;
  cursor: pointer;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
}
.btn:hover {
  color: var(--clr-primary-1);
  background: var(--clr-primary-8);
}
.section {
  padding: 5rem 0;
}
.section-title {
  text-align: center;
  margin-bottom: 4rem;
}
.section-title h2 {
  text-transform: uppercase;
}
.section-title span {
  color: var(--clr-primary-5);
}
.section-center {
  width: 90vw;
  margin: 0 auto;
  max-width: 1170px;
}
@media screen and (min-width: 992px) {
  .section-center {
    width: 95vw;
  }
}
/*
=============== 
Navbar
===============
*/
.navbar {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background: var(--clr-white);
  box-shadow: var(--dark-shadow);
  z-index: 1;
}
.nav-center {
  width: 100%;
  max-width: 1170px;
  margin: 0 auto;
}
.nav-header {
  display: -webkit-box;
  display: flex;
  -webkit-box-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  align-items: center;
  padding: 1rem 2rem;
}
.nav-toggle {
  background: transparent;
  border: transparent;
  font-size: 1.5rem;
  color: var(--clr-primary-5);
  -webkit-transition: var(--transition);
  transition: var(--transition);
  cursor: pointer;
}
.nav-toggle:hover {
  -webkit-transform: scale(1.2);
  transform: scale(1.2);
}
.nav-link {
  padding: 1rem 2rem;
  display: block;
  font-size: 1rem;
  color: var(--clr-grey-1);
  text-transform: capitalize;
  letter-spacing: var(--spacing);
  -webkit-transition: var(--transition);
  transition: var(--transition);
  cursor: pointer;
}
.nav-link:hover {
  background: var(--clr-primary-8);
  color: var(--clr-primary-1);
  padding-left: 2.25rem;
}
.nav-icons {
  display: none;
}
/* 280px */
.nav-links {
  height: 0;
  overflow: hidden;
  -webkit-transition: var(--transition);
  transition: var(--transition);
}
.show-links {
  height: 280px;
}
@media screen and (min-width: 992px) {
  .navbar {
    padding: 1rem 2rem;
  }
  /* hide toggle button */
  .nav-toggle {
    display: none;
  }
  .nav-center {
    display: -webkit-box;
    display: flex;
    -webkit-box-pack: justify;
    justify-content: space-between;
    -webkit-box-align: center;
    align-items: center;
    /* optional */
    flex-wrap: wrap;
  }
  .nav-header {
    padding: 0;
  }
  .nav-links {
    height: auto;
    display: -webkit-box;
    display: flex;
  }
  .nav-link {
    padding: 0;
    margin-right: 0.7rem;
  }
  .nav-link:hover {
    padding: 0;
    background: transparent;
    color: var(--clr-primary-8);
  }
  .nav-icons {
    display: -webkit-box;
    display: flex;
  }
  .nav-icon {
    color: var(--clr-primary-5);
    margin-right: 0.7rem;
    font-size: 1.2rem;
    -webkit-transition: var(--transition);
    transition: var(--transition);
  }
  .nav-icon:hover {
    color: var(--clr-primary-8);
  }
}
/*
=============== 
Hero
===============
*/
.hero {
  min-height: 100vh;
  background: var(--clr-primary-5);
  display: -webkit-box;
  display: flex;
  -webkit-box-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  align-items: center;
}
.hero-banner {
  text-align: center;
  padding: 0 3rem;
  color: var(--clr-white);
}
.hero-banner h1 {
  text-transform: uppercase;
}
.hero-banner p {
  max-width: 35rem;
  margin-left: auto;
  margin-right: auto;
  color: var(--clr-white);
  letter-spacing: var(--spacing);
}
.hero-btn {
  padding: 0.9rem 1.6rem;
  font-size: 1.25rem;
  background: white;
  color: var(--clr-primary-5);
}
.hero-btn:hover {
  background: transparent;
  color: white;
  border-color: white;
}
@media screen and (min-width: 768px) {
  .hero {
    background: -webkit-gradient(
        linear,
        left top,
        left bottom,
        from(rgba(44, 174, 186, 0.7)),
        to(rgb(0, 0, 0, 0.7))
      ),
      url("../images/main.jpeg") center/cover no-repeat;
    background: linear-gradient(rgba(44, 174, 186, 0.7), rgb(0, 0, 0, 0.7)),
      url("../images/main.jpeg") center/cover no-repeat;
  }
  .hero-banner {
    padding: 0;
  }
  .hero-banner p {
    max-width: 45rem;
  }
}
/*
=============== 
About
===============
*/
/* section add to globals */
/* title add to globals */
/* section center add to globals */
.about-image,
.about-info {
  margin-bottom: 2rem;
}
@media screen and (min-width: 992px) {
  .about-center {
    display: -webkit-box;
    display: flex;
    -webkit-box-pack: justify;
    justify-content: space-between;
    flex-wrap: wrap;
  }
  .about-image,
  .about-info {
    -webkit-box-flex: 0;
    flex: 0 0 calc(50% - 2rem);
    align-self: center;
    margin-bottom: 0;
  }
}
/* ... */

